everything/vm/NetworkPolicy/vm-allow-metrics-traffic.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: everything
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: test
  name: vm-allow-metrics-traffic
  namespace: vm
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test
      control-plane: controller-manager
  policyTypes:
  - Ingress
